Changed sample to use board.jpg

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -10,7 +10,7 @@
     <body>
 
         <h1>Original</h1>
-        <img id="original" src="https://lh3.googleusercontent.com/UVvaEs6lT9ZDxy6F4el3RLbz9Vb-58XMqi7wGv5EELjJ38tIyCQQljxyjKHKDle6SPztviWHve2ioQoTYXhG1_bQxnfys5OU4Zrcyf8HEypoNSPUJYpc231Ix3q0GHOHhFCUM_4B6eZobfUJeZBLdWADKLbOy6gDVR9jcyy8erDMEdS1humpok3erVte-rcDLUaM6o2dT3-tlRGLR4N9c40bKOwqb-E3CqB3cdfL2XQmt_8F5T3KTJn5EBhr4mlgUfLC2pIxPT5aX6cAu-X31vMXs7wdzFdyRtCDUq03g9j4RNIoxWYncVLp6WD08L7M65lYU4xCzski_RymMdU8iFIYUu3oDs4WBRnCIMgOHBLeVBihKW4Hvbysaa2FLSnsTkHmVLqglq2KHYnGl-aoP0X4-i3mYn4DiKI_vVsqgjx0s-w9FuXvL-P9bLH1x4jor9PyCDSwyMa8XzTGgTJe7moX_71baH92R5aJAlxIDHeIoKdq758nDU25w-cSBHKQcm49oLiGjQw72GzOt4LO8-NjRYGunXWalG20RaBK0lXBEZg3l1Yxq6IN2wKEdlHWBUz9=w1844-h1382-no" />
+        <img id="original" src="board.jpg" />
 
         <h3>70</h3>
         <div id="target-1"></div>
