--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -10,12 +10,8 @@
     <body>
 
         <h1>Original</h1>
-        <img id="original" src="board.jpg" />
-
-        <h3>70</h3>
+        <img id="original" src="dummy.jpg" />
         <div id="target-1"></div>
-        <h3>128</h3>
-        <div id="target-2"></div>
 
         <script src="bundle.js" async defer></script>
     </body>
